--- a/MngrPaycheck.Administrator/View/Product/Pages/AddParameter.xaml
+++ b/MngrPaycheck.Administrator/View/Product/Pages/AddParameter.xaml
@@ -23,17 +23,17 @@
         <Border Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource Border}">
             <ToolBar Style="{StaticResource ToolBar}">
                 <Menu Style="{StaticResource TopMenu}">
-                    <MenuItem Width="25" Command="{Binding AddProductTypeCommand}" >
+                    <MenuItem Width="25" Command="{Binding AddProductParameterCommand}" >
                         <MenuItem.Icon>
                             <Image Source="../../../Content/Images/Add.png"></Image>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Width="25" Command="{Binding Path=UpdateProductTypeCommand}">
+                    <MenuItem Width="25" Command="{Binding Path=UpdateProductParameterCommand}">
                         <MenuItem.Icon>
                             <Image Source="../../../Content/Images/Update.png"></Image>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Width="25" Command="{Binding DeleteProductTypeCommand}">
+                    <MenuItem Width="25" Command="{Binding DeleteProductParameterCommand}">
                         <MenuItem.Icon>
                             <Image Source="../../../Content/Images/Delete.png"></Image>
                         </MenuItem.Icon>
@@ -41,7 +41,7 @@
                 </Menu>
             </ToolBar>
         </Border>
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="3,3,3,3"  Background="#EEf5f9" FontSize="10" VerticalAlignment="Center" Text="{Binding ProductType.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="3,3,3,3"  Background="#EEf5f9" FontSize="10" VerticalAlignment="Center" Text="{Binding SelectedProductParameter.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
@@ -49,10 +49,10 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Border  Style="{StaticResource BorderListView}" Grid.Column="1">
-                <ListView Name="UserGrid2" ItemsSource="{Binding Products}" SelectedItem="{Binding SelectedProduct}" Style="{StaticResource ListViewAll}">
+                <ListView Name="UserGrid2" ItemsSource="{Binding ProductParametrs}" SelectedItem="{Binding SelectedProductParameter}" Style="{StaticResource ListViewAll}">
                     <ListView.View>
                         <GridView x:Name="grdTest2">
-                            <GridViewColumn Header="ProductParametr" DisplayMemberBinding="{Binding Cost, Mode=TwoWay}"  Width="200" />
+                            <GridViewColumn Header="ProductParametr" DisplayMemberBinding="{Binding Name, Mode=TwoWay}"  Width="200" />
                         </GridView>
                     </ListView.View>
                 </ListView>
